fix scrollbar theme

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,6 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 
-
+* {
+    scrollbar-width: thin;
+    scrollbar-color: #616161 hsla(180, 100%, 50%, 0.3);
+}
 
 *,
 *::before,
